# premiere-pro-youtube-downloader

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md  build.bat  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
backend/: YT2Premiere.spec  dialogs.py  downloader.py  premiere.py  requirements-build.txt  requirements.txt  server.py  settings.py
cep-extension/: app.js  index.html  panel.js
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/resources/cep-extension/: app.js  index.html  panel.js  ppro_script.jsx
desktop/src-tauri/resources/cep-extension/CSXS/: manifest.xml
desktop/src-tauri/resources/chrome-extension/: background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js
desktop/src-tauri/src/: cors.rs  main.rs  rate_limit.rs  request_logger.rs  server.rs  utils.rs  websocket.rs
desktop/src-tauri/src/models/: download.rs  ffmpeg_options.rs  history.rs  hyperframes.rs  mod.rs  runtime.rs  settings.rs
desktop/src-tauri/src/routes/: download.rs  folder_picker.rs  health.rs  history.rs  hyperframes.rs  integrations.rs  mod.rs  premiere.rs  settings.rs  video_info.rs
desktop/src-tauri/src/services/: downloader.rs  ffmpeg.rs  history.rs  hyperframes.rs  integrations.rs  mod.rs  premiere.rs  settings.rs
docs/: SECURITY.md
extension/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
installer/: installer.nsi
scripts/: download-binaries.sh  (+2 more)
(+101 files in other folders)
