[package]
name = "yt2premiere-desktop"
version = "3.0.0"
edition = "2021"
license = "MPL-2.0"
build = "build.rs"

[package.metadata.tauri-winres]
ProductName = "YT2Premiere"
OriginalFilename = "YT2Premiere.exe"
FileDescription = "Open-source desktop video downloader with Chrome and optional Premiere integration"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
sysinfo = "0.33"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.26"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rfd = "0.15"
dashmap = "6"
url = "2"

[dev-dependencies]
tempfile = "3"
